Fix for center align text

--- a/src/css/light.css
+++ b/src/css/light.css
@@ -170,11 +170,18 @@ a.bbCodeBlock-sourceJump {
     color: var(--textColor, #323333);
 }
 
+/* Center Align URL Block */
+/* https://adrenaline.com.br/forum/threads/02-08-2019-bugs-da-migracao-do-forum-para-a-versao-2-1-3.654380/page-27#post-1074985989 */
+.message-body div[style*="text-align: center"] .bbCodeBlock--unfurl {
+    display: flex;
+    margin-left: auto;
+    margin-right: auto;
+    text-align: left;
+}
+
 /* Message/Post */
 
-
 /* Signature/Assinatura */
-
 /* Overwite White/Light signatures! */
 .message-signature span[style*="color: rgb(255, 255, 255)"],
 .message-signature span[style*="color: #ffffff"],
